fixing spacing error and centering tiems

--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -9,9 +9,12 @@ body {
 
 /* Clear floats after the columns */
 .row:after {
-    content: ;
     display: table;
     clear: both;
+}
+
+.subSectionBox div.row {
+    align-items: center;
 }
 
 .resumeContainer {
